--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-dropzone": "^14.3.8",
     "react-intl": "7.1.13",
     "react-otp-input": "3.1.1",
+    "react-quill-new": "^3.6.0",
     "react-redux": "9.2.0",
     "react-responsive-carousel": "3.2.23",
     "react-router": "7.9.3",
