--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "@mui/icons-material": "7.3.4",
     "@mui/lab": "^7.0.1-beta.18",
     "@mui/material": "7.3.4",
-    "@mui/x-date-pickers": "^8.16.0",
+    "@mui/x-date-pickers": "^8.17.0",
     "@mui/x-tree-view": "^8.16.0",
     "@reduxjs/toolkit": "2.9.0",
     "@stomp/stompjs": "^7.2.1",
@@ -31,6 +31,7 @@
     "chance": "1.1.13",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
+    "dayjs": "^1.11.19",
     "firebase": "12.3.0",
     "formik": "2.4.6",
     "framer-motion": "12.23.22",
