nginx.conf - 정적 파일 관련 설정 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -5,6 +5,7 @@ server {
   server_name _;
 
   # React 정적 파일 위치
+  include /etc/nginx/mime.types;
   root /usr/share/nginx/html;
   index index.html;
 
