nginx.conf - 프록시 설정에 uploads 경로 추가

--- a/nginx.conf
+++ b/nginx.conf
@@ -18,6 +18,15 @@ server {
     try_files $uri $uri/ /index.html;
   }
 
+  # 이미지 파일 요청
+  location /uploads {
+    proxy_pass http://boot-container:8080;
+    proxy_set_header Host $host;
+    proxy_set_header X-Real-IP $remote_addr;
+    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-Proto $scheme;
+  }
+
   # API 요청(/api)을 백엔드로 프록시
   location /api {
     proxy_pass http://boot-container:8080;  # 같은 네트워크 내에서는 컨테이너명(boot-container)을 호스트명으로 사용
