--- a/nginx.conf
+++ b/nginx.conf
@@ -16,7 +16,7 @@ server {
   server_name _;
 
   # SSL 인증서 경로 (docker-compose.yml의 volumes와 일치해야 함)
-  ssl_certificate /etc/nginx/certs/cert.pem;
+  ssl_certificate /etc/nginx/certs/fullchain.pem;
   ssl_certificate_key /etc/nginx/certs/key.pem;
 
   # 백엔드의 spring.servlet.multipart.max-request-size=100MB 에 맞춤
