--- a/.github/workflows/cicd.yml
+++ b/.github/workflows/cicd.yml
@@ -35,7 +35,7 @@ jobs:
           key: ${{ secrets.EC2_SSH_KEY }}
           source: "./*"
           target: "/home/ubuntu/website/frontend"
-          rm: false
+          rm: true  # (전송 전 대상 폴더 비우기)
 
       # 4. EC2에서 Docker Compose 실행 (플러그인-https://github.com/appleboy/ssh-action)
       - name: Deploy with Docker Compose on EC2
@@ -45,8 +45,6 @@ jobs:
           username: ${{ secrets.EC2_USER }}
           key: ${{ secrets.EC2_SSH_KEY }}
           script: |
-            # 기존 프로젝트 삭제
-            rm -rf /home/ubuntu/website/frontend
             # website 디렉터리로 이동
             cd /home/ubuntu/website/frontend
             # 기존 컨테이너 중지 및 삭제
